# monty-pod

./: Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yml
contracts/: README.md  clip_rank.schema.json  face_probe.schema.json  infer_request.schema.json  infer_result.schema.json  op.schema.json  pod_job.schema.json  spec.schema.json  validate.py
contracts/examples/: clip_rank.payload.json  face_probe.payload.json  infer_request.align.json  infer_request.clip_rank.json  infer_request.face_probe.json  infer_result.align.json  infer_result.face_probe_error.json  pod_job.infer.json  pod_job.ops.json  pod_job.render.json  spec.final.json  spec.preview.json
contracts/examples/invalid/: clip_rank.group-without-embeds.json  face_probe.box-4-numbers.json  infer_request.align-without-weights.json  (+27 more)
contracts/ops/: camera.apply.json  cut.apply.json  edit.splice.json  edit.weld.json  measure.boundary.json  measure.master.json  media.normalize.json  media.scale.json  mograph.render.json  motion.kenburns.json
podagent/: __init__.py  accents.py  artifact.py  bundle.py  captions.py  cover.py  cp.py  finalize.py  infer_align.py  infer_cliprank.py  infer_probe.py  main.py  models.py  mograph.py  render.py  weights.py
podagent/ops/: __init__.py  pack.py  registry.py  runner.py
tests/: test_bundle.py  test_captions.py  test_contracts_goldens.py  test_cover.py  test_cp_file_transport.py  test_infer_align.py  test_infer_cliprank.py  test_leak_gate.py  test_mograph.py  test_ops.py  test_pod_job.py  test_render_broll.py  test_render_graph.py  test_weights.py
