[project]
name = "monty-pod-agent"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2",
    "requests",
    "numpy",
    "Pillow",
    # op params are validated against the registry schema fragment on BOTH sides, so the pod needs a
    # JSON Schema validator at RUNTIME (it was dev-only when contracts were checked in CI alone).
    # Pure-python and ~200 KB against a 4.7 GB image.
    "jsonschema",
]

[project.optional-dependencies]
ml = [
    "torch",
    "torchaudio",
    "transformers",
    "opencv-python-headless",
]
dev = [
    "pytest",
    "jsonschema",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["podagent"]
